Package name update

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pavex/publixe-url",
+    "name": "publixe/url",
     "description": "Url and Url script container",
     "type": "library",
     "license": "MIT",
